--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,35 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Dépendances
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
 
-# testing
-/coverage
-
-# next.js
+# Fichiers de build Next.js
 /.next/
 /out/
 
-# production
+# Fichiers de production
 /build
 
-# misc
+# Fichiers divers (spécifiques aux OS)
 .DS_Store
 *.pem
 
-# debug
+# Logs de débogage
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# vercel
+# Fichiers d'environnement locaux
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Fichiers de configuration Vercel et Netlify
 .vercel
+.netlify
 
-# typescript
+# Fichiers de cache et de compilation TypeScript
 *.tsbuildinfo
 next-env.d.ts
-
-.genkit/*
-.env*
-
-# firebase
-firebase-debug.log
-firestore-debug.log
